@@ -1152,8 +1152,7 @@ An optional second argument indicates the number of significant digits
 (default 40) with the result rounded.
 
 For C<logreal(2)> we use Formula 25 from Gourdon and Sebah (2010).
-For other values, depending on how much precision is needed, either
-Newton-Halley iteration with increasing precision ladder or AGM is used.
+For other values we use AGM (Sasaki and Kanada theta method).
 Performance is 100-1000x faster than Math::BigFloat's GMP backend.
 It is 10x slower than Pari/GP 2.10 and MPFR.
 
@@ -1523,7 +1522,6 @@ many digits (including the leading 3).  Rounding is performed.
 The implementation uses AGM and is similar in speed to MPFR.
 It is about 4x slower than Pari/GP's Ramanujan/Chudnovsky binary splitting
 method, and much slower than specialized programs such as C<y-cruncher>.
-No caching is performed, unlike those libraries.
 
 
 =head2 Euler
@@ -1533,7 +1531,6 @@ with that many digits.  Rounding is performed.
 
 The implementation is Brent-McMillan algorithm B, just like Pari/GP.
 Performance is about 2x faster than Pari/GP, but 2-10x slower than MPFR.
-No caching is performed, unlike those libraries.
 
 
 =head2 exp_mangoldt
